# Welt-Engine

./: .gitignore  CMakeLists.txt  README.md  setup-win32.py
examples/01-Wolf_and_Sheep/: CMakeLists.txt  ItemTestStick.h  LTexture.cpp  Sheep.h  SpriteInteractionsList.cpp  SpriteInteractionsList.h  SpriteSet.cpp  SpriteSet.h  Wolf.cpp  Wolf.h  ltimer.cpp  ltimer.h  main.cpp  resource.h
modules/: FindSDL2.cmake  FindSDL2_image.cmake
resource/: colorset_default.txt  spritedefinitions_default.txt
resource/example-01-Wolf_and_Sheep/: colorset_default.txt
src/: CMakeLists.txt  ColorList.cpp  ColorList.h  DisplayIDdef.h  FlatVector.h  IObjectSearch.h  Ientity.h  Iitem.h  Item.cpp  Item.h  ItemTestStick.cpp  ItemTestStick.h  Iworld.h  LTexture.cpp  LTexture.h  ObjectAndData.h  ObjectSearchCircle.h  Sheep.cpp  Sheep.h  SpriteInteractionsList.cpp  SpriteInteractionsList.h  SpriteSet.cpp  SpriteSet.h  TileMap.cpp  TileMap.h  Wolf.cpp  Wolf.h  entity.cpp  entity.h  main.cpp  material.h  resource.cpp  resource.h  tile.cpp  tile.h  universal.h  world.cpp  world.h
